--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -27,4 +27,17 @@
       align-content: center;
       padding: 64px;
     }
+    @media screen and (max-width: 500px) {
+        display: flex;
+        flex-direction: column;
+        .ordem1{
+          order:1
+        }
+        .ordem2{
+          order:2
+        }
+        .ordem3{
+          order:3
+        }
+      }
   }
